fix(sync): harden first sync safeguards